--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,6 @@
     min-height: 50px;
     transition:  border 0.6s linear;
     box-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 20px hsl(44, 96%, 50%), 0 0 30px hsl(44, 96%, 50%), 0 0 40px hsl(44, 96%, 50%), 0 0 55px hsl(44, 96%, 50%), 0 0 60px hsl(44, 96%, 50%);
-
 }
 
 .table-input{
@@ -34,15 +33,16 @@
     z-index: 1;
     background-color: black;
     width: 40%;
-    opacity: 0.7;
+    opacity: 0.8;
     -webkit-text-stroke: 1px hsl(44, 96%, 50%);
     -webkit-filter: drop-shadow(2px 2px 20px hsl(44, 96%, 50%));
+    border-radius: 10px;
 }
 
 .table-output{
     border: 1px black solid;
     text-align: center;
-    padding: 10px;
+   
     z-index: 1;
     background-color: black;
 }
